src/assets/styles/Header.css
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 100px;
  padding: 20px 5px;
  text-align: center;
}
.header #nav_1 {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.header #nav_1 a {
  margin-right: 20px;
  font-weight: 700;
}
.header img {
  width: 75px;
  height: 75px;
}
.header #nav_1 #services {
  display: flex;
  align-items: center;
  background-color: #ff8b00;
  border-radius: 10px;
  color: #ffffff;
  padding: 8px;
}
.header #nav_1 .active {
  font-weight: bold;
  color: #000000;
}
#btn_group {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.2rem;
}
#login {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 12px;
  padding: 6px 11px 6px 11px;
  border-radius: 10px;
  font-weight: 500;
  background-color: #374bff;
  color: #ffffff;
}
#panel {
  color: #fff;
}
#login span {
  color: #6574ff;
  margin: 0 5px;
}
#cart,
#dashboard,
#admin {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  border-radius: 10px;
  background-color: #ff8b00;
  color: #ffffff;
}
#nav_2 {
  background: #ffffff;
  width: 100%;
  display: none;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 20;
  padding: 0 5px;
  border-top: 1px solid #ccc;
}
#nav_2 .active {
  color: #000000;
}
@media (width <= 1000px) {
  .header {
    height: 80px;
    margin: 20px auto;
    padding: 0;
  }
  .header #nav_1 a {
    margin-right: 10px;
    font-size: 0.9rem;
  }
  #btn_group {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1rem;
  }
}

@media (width <= 900px) {
  .header img {
    width: 50px;
    height: 50px;
  }
  #cart {
    display: none;
  }
  .header #nav_1 {
    display: none;
  }
  #nav_2 {
    display: block;
  }
}

@media (width <= 400px) {
  .header {
    margin: 10px auto;
    padding: 0;
  }
  #login,
  #panel {
    margin: 5px;
  }
}

